--- a/css/index.css
+++ b/css/index.css
@@ -8,7 +8,6 @@
     width: 100vw;
     height: 100vh;
     border-style: solid;
-    margin: 0 auto;
 }
 
 
@@ -25,6 +24,8 @@
 }
 
 .gridItems{
+    width: 100%;
+    height: 100%;
     background-color: rgba(255, 255, 255, 0.8);
     border: 1px solid rgba(0, 0, 0, 0.8);
     padding: 20px;
