--- a/css/index.css
+++ b/css/index.css
@@ -12,10 +12,10 @@
 
 
 .gridContainer{
-    width: 75%;
-    height: 75%;
+    width: 100%;
+    height: 100%;
     display: grid;
-    grid-template-columns: auto auto auto auto;
+    grid-template-columns: auto auto auto auto auto auto auto auto auto auto;
     background-color: #2196F3;
     padding: 10px;
     border-style: solid;
