--- a/css/index.css
+++ b/css/index.css
@@ -3,11 +3,15 @@
     padding: 0;
     box-sizing: border-box;
 }
-
-.container{
+body{
     width: 100vw;
     height: 100vh;
+}
+.container{
+    width: 960px;
+    height: 960px;
     border-style: solid;
+    margin: 0 auto;
 }
 
 
