--- a/css/index.css
+++ b/css/index.css
@@ -6,12 +6,15 @@
 body{
     width: 100vw;
     height: 100vh;
+    max-width: 100%;
 }
 .container{
     width: 960px;
     height: 960px;
-    border-style: solid;
     margin: 0 auto;
+    display: grid;
+    align-items: center;
+    border-style: solid;
 }
 
 
@@ -19,19 +22,22 @@ body{
     width: 100%;
     height: 100%;
     display: grid;
+    justify-self: center;
+    align-items: center;
     background-color: #2196F3;
     padding: 10px;
     border-style: solid;
     border-color: red;
-    margin: 0 auto;
 }
 
 .gridItems{
     width: 100%;
     height: 100%;
+    display: grid;
     background-color: rgba(255, 255, 255, 0.8);
     border: 1px solid rgba(0, 0, 0, 0.8);
     padding: 20px;
-    font-size: 30px;
     text-align: center;
+    border-style: solid;
+    border-color: green;
 }
